# collab-email-journal

./: .replit  README.md  config.py  database.py  database_write.py  email_build.py  fetch_emails.py  main.py  pyproject.toml  question_gen.py  replit.nix  response_fetch.py
static/css/: styles.css
